// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformToCatalog creates new catalog 1`] = `
Object {
  "attributes": Object {
    "Channel": Object {
      "defaultDisplayForm": Object {
        "identifier": "label.orders.channel",
        "tags": "",
      },
      "displayForms": Object {
        "Channel": Object {
          "identifier": "label.orders.channel",
          "tags": "",
        },
      },
      "identifier": "attr.orders.channel",
      "tags": "",
    },
    "Employee Name": Object {
      "defaultDisplayForm": Object {
        "identifier": "label.employee.employeename",
        "tags": "",
      },
      "displayForms": Object {
        "Employee Name": Object {
          "identifier": "label.employee.employeename",
          "tags": "",
        },
        "Employee URL": Object {
          "identifier": "label.employee.employeename.employeeurl",
          "tags": "",
        },
      },
      "identifier": "attr.employee.employeename",
      "tags": "",
    },
  },
  "dashboards": Object {
    "KPIs": Object {
      "identifier": "afMA17GSbk31",
      "tags": "",
    },
    "Store management KPIs": Object {
      "identifier": "abBJlnxrfEWH",
      "tags": "",
    },
    "Untitled": Object {
      "identifier": "aahlrtUEgKkq",
      "tags": "",
    },
  },
  "dateDataSets": Object {
    "Date (Timeline)": Object {
      "attributes": Object {
        "Date (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.date.mmddyyyy",
            "tags": "",
          },
          "displayForms": Object {
            "Long (Mon, Jan 1, 2010) (Timeline)": Object {
              "identifier": "timeline.date.long",
              "tags": "",
            },
            "dd-mm-yyyy (Timeline)": Object {
              "identifier": "timeline.date.eddmmyyyy",
              "tags": "",
            },
            "dd/mm/yyyy (Timeline)": Object {
              "identifier": "timeline.date.ddmmyyyy",
              "tags": "",
            },
            "m/d/yy (no leading zeroes) (Timeline)": Object {
              "identifier": "timeline.date.mdyy",
              "tags": "",
            },
            "mm/dd/yyyy (Timeline)": Object {
              "identifier": "timeline.date.mmddyyyy",
              "tags": "",
            },
            "yyyy-mm-dd (Timeline)": Object {
              "identifier": "timeline.date.yyyymmdd",
              "tags": "",
            },
          },
          "identifier": "timeline.date",
          "tags": "date",
        },
        "Day of Month (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aca81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.aca81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.month",
          "tags": "date day month",
        },
        "Day of Quarter (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.ab481lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.ab481lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.quarter",
          "tags": "date day quarter",
        },
        "Day of Week (Mon-Sun) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abU81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (Monday) (Timeline)": Object {
              "identifier": "timeline.abY81lMifn6q",
              "tags": "",
            },
            "Number (1=Monday) (Timeline)": Object {
              "identifier": "timeline.abW81lMifn6q",
              "tags": "",
            },
            "Short (Mon) (Timeline)": Object {
              "identifier": "timeline.abU81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.euweek",
          "tags": "date day eu week",
        },
        "Day of Week (Sun-Sat) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abK81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (Sunday) (Timeline)": Object {
              "identifier": "timeline.abO81lMifn6q",
              "tags": "",
            },
            "Number (1=Sunday) (Timeline)": Object {
              "identifier": "timeline.abM81lMifn6q",
              "tags": "",
            },
            "Short (Sun) (Timeline)": Object {
              "identifier": "timeline.abK81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.week",
          "tags": "date day week",
        },
        "Day of Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abE81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.abE81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.year",
          "tags": "date day year",
        },
        "Month (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abm81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (January) (Timeline)": Object {
              "identifier": "timeline.abs81lMifn6q",
              "tags": "",
            },
            "M/Q (M1/Q1) (Timeline)": Object {
              "identifier": "timeline.abo81lMifn6q",
              "tags": "",
            },
            "Number (M1) (Timeline)": Object {
              "identifier": "timeline.abq81lMifn6q",
              "tags": "",
            },
            "Short (Jan) (Timeline)": Object {
              "identifier": "timeline.abm81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.month.in.year",
          "tags": "date month year",
        },
        "Month of Quarter (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aby81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number (Timeline)": Object {
              "identifier": "timeline.aby81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.month.in.quarter",
          "tags": "date month quarter",
        },
        "Month/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.act81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (January 2010) (Timeline)": Object {
              "identifier": "timeline.acx81lMifn6q",
              "tags": "",
            },
            "Number (1/2010) (Timeline)": Object {
              "identifier": "timeline.acv81lMifn6q",
              "tags": "",
            },
            "Short (Jan 2010) (Timeline)": Object {
              "identifier": "timeline.act81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.month",
          "tags": "date month",
        },
        "Quarter (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aam81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.aam81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.quarter.in.year",
          "tags": "date quarter year",
        },
        "Quarter/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aci81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "US Short (Timeline)": Object {
              "identifier": "timeline.aci81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.quarter",
          "tags": "date quarter",
        },
        "Week (Mon-Sun) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aba81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number EU (Timeline)": Object {
              "identifier": "timeline.aba81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.euweek.in.year",
          "tags": "date eu week year",
        },
        "Week (Mon-Sun) of Qtr (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abg81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number EU (Timeline)": Object {
              "identifier": "timeline.abg81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.euweek.in.quarter",
          "tags": "date eu quarter week",
        },
        "Week (Mon-Sun)/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aa281lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "From - To (Timeline)": Object {
              "identifier": "timeline.aaW81lMifn6q",
              "tags": "",
            },
            "Week #/Year (W1/2010) (Timeline)": Object {
              "identifier": "timeline.aa281lMifn6q",
              "tags": "",
            },
            "Week Starting (Timeline)": Object {
              "identifier": "timeline.aaY81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.euweek",
          "tags": "date eu week",
        },
        "Week (Sun-Sat) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aaI81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number US (Timeline)": Object {
              "identifier": "timeline.aaI81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.week.in.year",
          "tags": "date week year",
        },
        "Week (Sun-Sat) of Qtr (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aaO81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number US (Timeline)": Object {
              "identifier": "timeline.aaO81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.week.in.quarter",
          "tags": "date quarter week",
        },
        "Week (Sun-Sat)/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aaA81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "From - To (Timeline)": Object {
              "identifier": "timeline.aau81lMifn6q",
              "tags": "",
            },
            "Week #/Year (Cont.) (Timeline)": Object {
              "identifier": "timeline.aay81lMifn6q",
              "tags": "",
            },
            "Week #/Year (W1/2010) (Timeline)": Object {
              "identifier": "timeline.aaA81lMifn6q",
              "tags": "",
            },
            "Week Starting (Timeline)": Object {
              "identifier": "timeline.aaw81lMifn6q",
              "tags": "",
            },
            "Wk/Qtr/Year (Cont.) (Timeline)": Object {
              "identifier": "timeline.aaC81lMifn6q",
              "tags": "",
            },
            "Wk/Qtr/Year (Timeline)": Object {
              "identifier": "timeline.aas81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.week",
          "tags": "date week",
        },
        "Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aag81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Year (Timeline)": Object {
              "identifier": "timeline.aag81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.year",
          "tags": "date year",
        },
      },
      "identifier": "timeline.dataset.dt",
      "tags": "",
    },
  },
  "measures": Object {
    "$ Menu Item Sales": Object {
      "identifier": "fact.salesdetailfact.menuitemsales",
      "tags": "",
    },
    "Cost": Object {
      "identifier": "fact.restaurantcostsfact.cost",
      "tags": "",
    },
    "_Filter Last 4 Quarter": Object {
      "identifier": "aaIHiWZjfWNA",
      "tags": "hidden",
    },
    "_Filter Quarter": Object {
      "identifier": "aaiF4bffe4yn",
      "tags": "hidden",
    },
  },
  "projectId": "test",
  "visualizations": Object {
    "$ Total Sales by Location": Object {
      "identifier": "aaBN5UG3dXu4",
      "tags": "",
    },
    "Labor Costs vs Scheduled Costs": Object {
      "identifier": "abhJpedgcfU2",
      "tags": "",
    },
    "Total Sales by City": Object {
      "identifier": "acPWDTL2bJeX",
      "tags": "",
    },
  },
}
`;

exports[`transformToCatalog merges existing catalog 1`] = `
Object {
  "attributes": Object {
    "Employee Name": Object {
      "defaultDisplayForm": Object {
        "identifier": "label.employee.employeename",
        "tags": "",
      },
      "displayForms": Object {
        "Employee Name": Object {
          "identifier": "label.employee.employeename",
          "tags": "",
        },
        "Employee URL": Object {
          "identifier": "label.employee.employeename.employeeurl",
          "tags": "",
        },
      },
      "identifier": "attr.employee.employeename",
      "tags": "",
    },
    "Renamed Channel": Object {
      "defaultDisplayForm": Object {
        "identifier": "label.orders.channel",
        "tags": "",
      },
      "displayForms": Object {
        "Renamed Channel Df": Object {
          "identifier": "label.orders.channel",
          "tags": "",
        },
      },
      "identifier": "attr.orders.channel",
      "tags": "",
    },
  },
  "dashboards": Object {
    "KPIs": Object {
      "identifier": "afMA17GSbk31",
      "tags": "",
    },
    "Store management KPIs": Object {
      "identifier": "abBJlnxrfEWH",
      "tags": "",
    },
    "Untitled": Object {
      "identifier": "aahlrtUEgKkq",
      "tags": "",
    },
  },
  "dateDataSets": Object {
    "Date (Timeline)": Object {
      "attributes": Object {
        "Date (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.date.mmddyyyy",
            "tags": "",
          },
          "displayForms": Object {
            "Long (Mon, Jan 1, 2010) (Timeline)": Object {
              "identifier": "timeline.date.long",
              "tags": "",
            },
            "dd-mm-yyyy (Timeline)": Object {
              "identifier": "timeline.date.eddmmyyyy",
              "tags": "",
            },
            "dd/mm/yyyy (Timeline)": Object {
              "identifier": "timeline.date.ddmmyyyy",
              "tags": "",
            },
            "m/d/yy (no leading zeroes) (Timeline)": Object {
              "identifier": "timeline.date.mdyy",
              "tags": "",
            },
            "mm/dd/yyyy (Timeline)": Object {
              "identifier": "timeline.date.mmddyyyy",
              "tags": "",
            },
            "yyyy-mm-dd (Timeline)": Object {
              "identifier": "timeline.date.yyyymmdd",
              "tags": "",
            },
          },
          "identifier": "timeline.date",
          "tags": "date",
        },
        "Day of Month (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aca81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.aca81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.month",
          "tags": "date day month",
        },
        "Day of Quarter (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.ab481lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.ab481lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.quarter",
          "tags": "date day quarter",
        },
        "Day of Week (Mon-Sun) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abU81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (Monday) (Timeline)": Object {
              "identifier": "timeline.abY81lMifn6q",
              "tags": "",
            },
            "Number (1=Monday) (Timeline)": Object {
              "identifier": "timeline.abW81lMifn6q",
              "tags": "",
            },
            "Short (Mon) (Timeline)": Object {
              "identifier": "timeline.abU81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.euweek",
          "tags": "date day eu week",
        },
        "Day of Week (Sun-Sat) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abK81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (Sunday) (Timeline)": Object {
              "identifier": "timeline.abO81lMifn6q",
              "tags": "",
            },
            "Number (1=Sunday) (Timeline)": Object {
              "identifier": "timeline.abM81lMifn6q",
              "tags": "",
            },
            "Short (Sun) (Timeline)": Object {
              "identifier": "timeline.abK81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.week",
          "tags": "date day week",
        },
        "Day of Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abE81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.abE81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.day.in.year",
          "tags": "date day year",
        },
        "Month (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abm81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (January) (Timeline)": Object {
              "identifier": "timeline.abs81lMifn6q",
              "tags": "",
            },
            "M/Q (M1/Q1) (Timeline)": Object {
              "identifier": "timeline.abo81lMifn6q",
              "tags": "",
            },
            "Number (M1) (Timeline)": Object {
              "identifier": "timeline.abq81lMifn6q",
              "tags": "",
            },
            "Short (Jan) (Timeline)": Object {
              "identifier": "timeline.abm81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.month.in.year",
          "tags": "date month year",
        },
        "Month of Quarter (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aby81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number (Timeline)": Object {
              "identifier": "timeline.aby81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.month.in.quarter",
          "tags": "date month quarter",
        },
        "Month/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.act81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Long (January 2010) (Timeline)": Object {
              "identifier": "timeline.acx81lMifn6q",
              "tags": "",
            },
            "Number (1/2010) (Timeline)": Object {
              "identifier": "timeline.acv81lMifn6q",
              "tags": "",
            },
            "Short (Jan 2010) (Timeline)": Object {
              "identifier": "timeline.act81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.month",
          "tags": "date month",
        },
        "Quarter (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aam81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "default (Timeline)": Object {
              "identifier": "timeline.aam81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.quarter.in.year",
          "tags": "date quarter year",
        },
        "Quarter/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aci81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "US Short (Timeline)": Object {
              "identifier": "timeline.aci81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.quarter",
          "tags": "date quarter",
        },
        "Week (Mon-Sun) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aba81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number EU (Timeline)": Object {
              "identifier": "timeline.aba81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.euweek.in.year",
          "tags": "date eu week year",
        },
        "Week (Mon-Sun) of Qtr (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.abg81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number EU (Timeline)": Object {
              "identifier": "timeline.abg81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.euweek.in.quarter",
          "tags": "date eu quarter week",
        },
        "Week (Mon-Sun)/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aa281lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "From - To (Timeline)": Object {
              "identifier": "timeline.aaW81lMifn6q",
              "tags": "",
            },
            "Week #/Year (W1/2010) (Timeline)": Object {
              "identifier": "timeline.aa281lMifn6q",
              "tags": "",
            },
            "Week Starting (Timeline)": Object {
              "identifier": "timeline.aaY81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.euweek",
          "tags": "date eu week",
        },
        "Week (Sun-Sat) (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aaI81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number US (Timeline)": Object {
              "identifier": "timeline.aaI81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.week.in.year",
          "tags": "date week year",
        },
        "Week (Sun-Sat) of Qtr (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aaO81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Number US (Timeline)": Object {
              "identifier": "timeline.aaO81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.week.in.quarter",
          "tags": "date quarter week",
        },
        "Week (Sun-Sat)/Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aaA81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "From - To (Timeline)": Object {
              "identifier": "timeline.aau81lMifn6q",
              "tags": "",
            },
            "Week #/Year (Cont.) (Timeline)": Object {
              "identifier": "timeline.aay81lMifn6q",
              "tags": "",
            },
            "Week #/Year (W1/2010) (Timeline)": Object {
              "identifier": "timeline.aaA81lMifn6q",
              "tags": "",
            },
            "Week Starting (Timeline)": Object {
              "identifier": "timeline.aaw81lMifn6q",
              "tags": "",
            },
            "Wk/Qtr/Year (Cont.) (Timeline)": Object {
              "identifier": "timeline.aaC81lMifn6q",
              "tags": "",
            },
            "Wk/Qtr/Year (Timeline)": Object {
              "identifier": "timeline.aas81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.week",
          "tags": "date week",
        },
        "Year (Timeline)": Object {
          "defaultDisplayForm": Object {
            "identifier": "timeline.aag81lMifn6q",
            "tags": "",
          },
          "displayForms": Object {
            "Year (Timeline)": Object {
              "identifier": "timeline.aag81lMifn6q",
              "tags": "",
            },
          },
          "identifier": "timeline.year",
          "tags": "date year",
        },
      },
      "identifier": "timeline.dataset.dt",
      "tags": "",
    },
  },
  "measures": Object {
    "$ Menu Item Sales": Object {
      "identifier": "fact.salesdetailfact.menuitemsales",
      "tags": "",
    },
    "Cost": Object {
      "identifier": "fact.restaurantcostsfact.cost",
      "tags": "",
    },
    "_Filter Last 4 Quarter": Object {
      "identifier": "aaIHiWZjfWNA",
      "tags": "hidden",
    },
    "_Filter Quarter": Object {
      "identifier": "aaiF4bffe4yn",
      "tags": "hidden",
    },
  },
  "projectId": "test",
  "visualizations": Object {
    "My Renamed Total Sales By Location": Object {
      "identifier": "aaBN5UG3dXu4",
      "tags": "",
    },
    "Total Sales by City": Object {
      "identifier": "abhJpedgcfU2",
      "tags": "",
    },
    "Total Sales by City_1": Object {
      "identifier": "acPWDTL2bJeX",
      "tags": "",
    },
  },
}
`;
